--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     ], 
                     temperature: 0.7, 
                     max_tokens: -1,
-                    stream: false
+                    stream: True
                 }),
             })
             .then(response => response.json())
