--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             padding-right: 10px;
             margin-right: 10px;
             overflow-y: auto;
-            max-height: 300px; /* Adjust as needed */
+            max-height: 400px; /* Adjusted size for the chat history section */
         }
         .message {
             margin-bottom: 10px;
@@ -136,6 +136,8 @@
 
         // Example: Display previous messages (replace with actual message history logic)
         displayMessage("assistant", "Hello, how can I assist you today?");
+        displayMessage("user", "Can you tell me about your services?");
+        displayMessage("assistant", "Sure, we provide a range of services including...");
     </script>
 </body>
 </html>
