--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #000;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
         .container {
-            background-color: #fff;
+            background-color: #333;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             padding: 20px;
@@ -25,7 +26,7 @@
             flex-direction: column;
         }
         .chat-history {
-            border-right: 1px solid #ddd;
+            border-right: 1px solid #555;
             padding-right: 10px;
             margin-right: 10px;
             overflow-y: auto;
@@ -47,12 +48,14 @@
         #userInput {
             flex: 1;
             padding: 8px;
-            border: 1px solid #ddd;
+            border: 1px solid #555;
             border-radius: 4px;
             resize: none; /* Prevent resizing */
             min-height: 50px; /* Minimum height */
             max-height: 150px; /* Maximum height */
             overflow-y: auto; /* Enable vertical scroll if needed */
+            background-color: #222;
+            color: #fff;
         }
         #sendButton {
             padding: 8px 20px;
@@ -87,7 +90,7 @@
         function sendMessage() {
             var userInput = document.getElementById("userInput").value;
             displayMessage("user", userInput); // Display user message in chat history
-            fetch('http://localhost:80/v1/chat/completions', {
+            fetch('http://localhost:1234/v1/chat/completions', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
