--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             overflow-y: auto; /* Enable vertical scroll if needed */
             background-color: #222;
             color: #fff;
+            outline: none; /* Remove the focus outline */
         }
         #sendButton {
             padding: 12px 20px; /* Added padding */
@@ -65,6 +66,7 @@
             color: #fff;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            border-radius: 20px; /* Rounded corners */
         }
         #sendButton:hover {
             background-color: #0056b3;
