--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
         .container {
             background-color: #333;
-            border-radius: 20px; /* Rounded corners */
+            border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             padding: 20px;
             width: 800px;
@@ -49,7 +49,7 @@
             flex: 1;
             padding: 8px;
             border: 1px solid #555;
-            border-radius: 20px; /* Rounded corners */
+            border-radius: 4px;
             resize: none; /* Prevent resizing */
             min-height: 50px; /* Minimum height */
             max-height: 150px; /* Maximum height */
@@ -60,7 +60,7 @@
         #sendButton {
             padding: 8px 20px;
             border: none;
-            border-radius: 20px; /* Rounded corners */
+            border-radius: 4px;
             background-color: #007bff;
             color: #fff;
             cursor: pointer;
@@ -142,4 +142,3 @@
     </script>
 </body>
 </html>
-
